--- a/mypage/crud/templates/crud/student_list.html
+++ b/mypage/crud/templates/crud/student_list.html
@@ -7,7 +7,7 @@
     border: 1px solid #444444;
   }
 </style>
-
+<h1> 학생정보 </h1>
 <h1> Main Page </h1>
 <hr>
 <button class="btn btn-outline-info btn-sm" onclick="location.href='{% url 'crud:create' %}'"> 추가 </button>
