--- a/mypage/crud/templates/crud/student_list.html
+++ b/mypage/crud/templates/crud/student_list.html
@@ -1,80 +1,39 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <style>
-    table {
-      width: 100%;
-      border: 1px solid #444444;
-    }
-    th, td {
-      border: 1px solid #444444;
-    }
-  </style>
-  <title>Title</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
-<body>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<style>
+  table {
+    width: 100%;
+    border: 1px solid #444444;
+  }
+  th, td {
+    border: 1px solid #444444;
+  }
+</style>
 <h1> 학생정보 </h1>
+<h1> Main Page </h1>
 <hr>
 <button class="btn btn-outline-info btn-sm" onclick="location.href='{% url 'crud:create' %}'"> 추가 </button>
-
-<script>
-
-$(function(){
-    $('#btn1').click(function(){
-        //alert("ajax코드");
-        $.ajax({
-            url:'/crud/searchData/',
-            dataType:'text', //반환될 데이터 타입
-            type:'POST',
-            data:{'major_id' : $('#major_id').val()},
-            success:function(result){
-              $('#result').html(result)
-              //['studentID','name','major_id','phone','address','hobby','skill']
-            }
-        });
-    });
-});
-</script>
-<input type="text" id="major_id" >
-<button name="btn1" id="btn1" class="btn btn-outline-info btn-sm" > major_id로 찾기</button>
 <hr>
-<div name ='result' id = 'result'>
-  <table>
-      <tr>
-        <td>studentID</td>
-        <td>name</td>
-        <td>major_id</td>
-        <td>phone</td>
-        <td>address</td>
-        <td>hobby</td>
-        <td>skill</td>
-        <td>button</td>
-      </tr>
-      {% for student in student_list %}
-      <tr>
-        <td><a href = "{% url 'crud:detail' student.studentID %}">{{student.studentID }}</a></td>
-        <td>{{student.name}}</td>
-        <td>{{student.major_id}}</td>
-        <td>{{student.phone}}</td>
-        <td>{{student.address}}</td>
-        <td>{{student.hobby}}</td>
-        <td>{{student.skill}}</td>
-        <td><button class="btn btn-outline-info btn-sm" onclick="location.href='{% url 'crud:edit' student.studentID %}'">수정하기</button>
-        <button class="btn btn-outline-info btn-sm" onclick="location.href='{% url 'crud:delete' student.studentID %}'">삭제하기</button></td>
-      </tr> 
-      {% endfor %}
-  </table>
-</div>
-</body>
-</html>
+<table>
+<tr>
+<td>studentID</td>
+<td>name</td>
+<td>major_id</td>
+<td>phone</td>
+<td>address</td>
+<td>hobby</td>
+<td>skill</td>
+<td>button</td>
+</tr>
+{% for student in student_list %}
+<tr>
+    <td><a href = "{% url 'crud:detail' student.studentID %}">{{student.studentID }}</a></td>
+    <td>{{student.name}}</td>
+    <td>{{student.major_id}}</td>
+    <td>{{student.phone}}</td>
+    <td>{{student.address}}</td>
+    <td>{{student.hobby}}</td>
+    <td>{{student.skill}}</td>
+    <td><button class="btn btn-outline-info btn-sm" onclick="location.href='{% url 'crud:edit' student.studentID %}'">수정하기</button>
+    <button class="btn btn-outline-info btn-sm" onclick="location.href='{% url 'crud:delete' student.studentID %}'">삭제하기</button></td>
+</tr> 
+{% endfor %}
+</table>
